versioned_docs/version-0.21.0/api/server/interfaces/ServerMessage.md
# Interface: ServerMessage

Defined in: packages/js-server-sdk/packages/fishjam-proto/dist/index.d.ts:55

Defines any type of message passed between FJ and server peer

## Properties

### authenticated?

> `optional` **authenticated**: `ServerMessage_Authenticated`

Defined in: packages/js-server-sdk/packages/fishjam-proto/dist/index.d.ts:61

***

### authRequest?

> `optional` **authRequest**: `ServerMessage_AuthRequest`

Defined in: packages/js-server-sdk/packages/fishjam-proto/dist/index.d.ts:62

***

### componentCrashed?

> `optional` **componentCrashed**: `ServerMessage_ComponentCrashed`

Defined in: packages/js-server-sdk/packages/fishjam-proto/dist/index.d.ts:60

***

### hlsPlayable?

> `optional` **hlsPlayable**: `ServerMessage_HlsPlayable`

Defined in: packages/js-server-sdk/packages/fishjam-proto/dist/index.d.ts:67

***

### hlsUploadCrashed?

> `optional` **hlsUploadCrashed**: `ServerMessage_HlsUploadCrashed`

Defined in: packages/js-server-sdk/packages/fishjam-proto/dist/index.d.ts:69

***

### hlsUploaded?

> `optional` **hlsUploaded**: `ServerMessage_HlsUploaded`

Defined in: packages/js-server-sdk/packages/fishjam-proto/dist/index.d.ts:68

***

### peerAdded?

> `optional` **peerAdded**: `ServerMessage_PeerAdded`

Defined in: packages/js-server-sdk/packages/fishjam-proto/dist/index.d.ts:74

***

### peerConnected?

> `optional` **peerConnected**: `ServerMessage_PeerConnected`

Defined in: packages/js-server-sdk/packages/fishjam-proto/dist/index.d.ts:57

***

### peerCrashed?

> `optional` **peerCrashed**: `ServerMessage_PeerCrashed`

Defined in: packages/js-server-sdk/packages/fishjam-proto/dist/index.d.ts:59

***

### peerDeleted?

> `optional` **peerDeleted**: `ServerMessage_PeerDeleted`

Defined in: packages/js-server-sdk/packages/fishjam-proto/dist/index.d.ts:75

***

### peerDisconnected?

> `optional` **peerDisconnected**: `ServerMessage_PeerDisconnected`

Defined in: packages/js-server-sdk/packages/fishjam-proto/dist/index.d.ts:58

***

### peerMetadataUpdated?

> `optional` **peerMetadataUpdated**: `ServerMessage_PeerMetadataUpdated`

Defined in: packages/js-server-sdk/packages/fishjam-proto/dist/index.d.ts:70

***

### roomCrashed?

> `optional` **roomCrashed**: `ServerMessage_RoomCrashed`

Defined in: packages/js-server-sdk/packages/fishjam-proto/dist/index.d.ts:56

***

### roomCreated?

> `optional` **roomCreated**: `ServerMessage_RoomCreated`

Defined in: packages/js-server-sdk/packages/fishjam-proto/dist/index.d.ts:65

***

### roomDeleted?

> `optional` **roomDeleted**: `ServerMessage_RoomDeleted`

Defined in: packages/js-server-sdk/packages/fishjam-proto/dist/index.d.ts:66

***

### streamConnected?

> `optional` **streamConnected**: `ServerMessage_StreamConnected`

Defined in: packages/js-server-sdk/packages/fishjam-proto/dist/index.d.ts:76

***

### streamDisconnected?

> `optional` **streamDisconnected**: `ServerMessage_StreamDisconnected`

Defined in: packages/js-server-sdk/packages/fishjam-proto/dist/index.d.ts:77

***

### subscribeRequest?

> `optional` **subscribeRequest**: `ServerMessage_SubscribeRequest`

Defined in: packages/js-server-sdk/packages/fishjam-proto/dist/index.d.ts:63

***

### subscribeResponse?

> `optional` **subscribeResponse**: `ServerMessage_SubscribeResponse`

Defined in: packages/js-server-sdk/packages/fishjam-proto/dist/index.d.ts:64

***

### trackAdded?

> `optional` **trackAdded**: `ServerMessage_TrackAdded`

Defined in: packages/js-server-sdk/packages/fishjam-proto/dist/index.d.ts:71

***

### trackMetadataUpdated?

> `optional` **trackMetadataUpdated**: `ServerMessage_TrackMetadataUpdated`

Defined in: packages/js-server-sdk/packages/fishjam-proto/dist/index.d.ts:73

***

### trackRemoved?

> `optional` **trackRemoved**: `ServerMessage_TrackRemoved`

Defined in: packages/js-server-sdk/packages/fishjam-proto/dist/index.d.ts:72

***

### viewerConnected?

> `optional` **viewerConnected**: `ServerMessage_ViewerConnected`

Defined in: packages/js-server-sdk/packages/fishjam-proto/dist/index.d.ts:78

***

### viewerDisconnected?

> `optional` **viewerDisconnected**: `ServerMessage_ViewerDisconnected`

Defined in: packages/js-server-sdk/packages/fishjam-proto/dist/index.d.ts:79
