versioned_docs/version-0.25.0/api/server/interfaces/ServerMessage.md
# Interface: ServerMessage

Defined in: fishjam-proto/dist/index.d.ts:63

Defines any type of message passed between FJ and server peer

## Properties

### authenticated?

> `optional` **authenticated**: `ServerMessage_Authenticated`

Defined in: fishjam-proto/dist/index.d.ts:69

***

### authRequest?

> `optional` **authRequest**: `ServerMessage_AuthRequest`

Defined in: fishjam-proto/dist/index.d.ts:70

***

### channelAdded?

> `optional` **channelAdded**: `ServerMessage_ChannelAdded`

Defined in: fishjam-proto/dist/index.d.ts:92

***

### channelRemoved?

> `optional` **channelRemoved**: `ServerMessage_ChannelRemoved`

Defined in: fishjam-proto/dist/index.d.ts:93

***

### componentCrashed?

> `optional` **componentCrashed**: `ServerMessage_ComponentCrashed`

Defined in: fishjam-proto/dist/index.d.ts:68

***

### hlsPlayable?

> `optional` **hlsPlayable**: `ServerMessage_HlsPlayable`

Defined in: fishjam-proto/dist/index.d.ts:75

***

### hlsUploadCrashed?

> `optional` **hlsUploadCrashed**: `ServerMessage_HlsUploadCrashed`

Defined in: fishjam-proto/dist/index.d.ts:77

***

### hlsUploaded?

> `optional` **hlsUploaded**: `ServerMessage_HlsUploaded`

Defined in: fishjam-proto/dist/index.d.ts:76

***

### peerAdded?

> `optional` **peerAdded**: `ServerMessage_PeerAdded`

Defined in: fishjam-proto/dist/index.d.ts:82

***

### peerConnected?

> `optional` **peerConnected**: `ServerMessage_PeerConnected`

Defined in: fishjam-proto/dist/index.d.ts:65

***

### peerCrashed?

> `optional` **peerCrashed**: `ServerMessage_PeerCrashed`

Defined in: fishjam-proto/dist/index.d.ts:67

***

### peerDeleted?

> `optional` **peerDeleted**: `ServerMessage_PeerDeleted`

Defined in: fishjam-proto/dist/index.d.ts:83

***

### peerDisconnected?

> `optional` **peerDisconnected**: `ServerMessage_PeerDisconnected`

Defined in: fishjam-proto/dist/index.d.ts:66

***

### peerMetadataUpdated?

> `optional` **peerMetadataUpdated**: `ServerMessage_PeerMetadataUpdated`

Defined in: fishjam-proto/dist/index.d.ts:78

***

### roomCrashed?

> `optional` **roomCrashed**: `ServerMessage_RoomCrashed`

Defined in: fishjam-proto/dist/index.d.ts:64

***

### roomCreated?

> `optional` **roomCreated**: `ServerMessage_RoomCreated`

Defined in: fishjam-proto/dist/index.d.ts:73

***

### roomDeleted?

> `optional` **roomDeleted**: `ServerMessage_RoomDeleted`

Defined in: fishjam-proto/dist/index.d.ts:74

***

### ~~streamConnected?~~

> `optional` **streamConnected**: `ServerMessage_StreamConnected`

Defined in: fishjam-proto/dist/index.d.ts:85

#### Deprecated

***

### ~~streamDisconnected?~~

> `optional` **streamDisconnected**: `ServerMessage_StreamDisconnected`

Defined in: fishjam-proto/dist/index.d.ts:87

#### Deprecated

***

### streamerConnected?

> `optional` **streamerConnected**: `ServerMessage_StreamerConnected`

Defined in: fishjam-proto/dist/index.d.ts:90

***

### streamerDisconnected?

> `optional` **streamerDisconnected**: `ServerMessage_StreamerDisconnected`

Defined in: fishjam-proto/dist/index.d.ts:91

***

### subscribeRequest?

> `optional` **subscribeRequest**: `ServerMessage_SubscribeRequest`

Defined in: fishjam-proto/dist/index.d.ts:71

***

### subscribeResponse?

> `optional` **subscribeResponse**: `ServerMessage_SubscribeResponse`

Defined in: fishjam-proto/dist/index.d.ts:72

***

### trackAdded?

> `optional` **trackAdded**: `ServerMessage_TrackAdded`

Defined in: fishjam-proto/dist/index.d.ts:79

***

### trackMetadataUpdated?

> `optional` **trackMetadataUpdated**: `ServerMessage_TrackMetadataUpdated`

Defined in: fishjam-proto/dist/index.d.ts:81

***

### trackRemoved?

> `optional` **trackRemoved**: `ServerMessage_TrackRemoved`

Defined in: fishjam-proto/dist/index.d.ts:80

***

### viewerConnected?

> `optional` **viewerConnected**: `ServerMessage_ViewerConnected`

Defined in: fishjam-proto/dist/index.d.ts:88

***

### viewerDisconnected?

> `optional` **viewerDisconnected**: `ServerMessage_ViewerDisconnected`

Defined in: fishjam-proto/dist/index.d.ts:89
